# roms-jedi

./: .gitignore  CMakeLists.txt  README.md
bundle/: .gitignore  CMakeLists.txt
cmake/: compiler_flags_IntelLLVM_Fortran.cmake  compiler_flags_Intel_Fortran.cmake  roms-jedi_compiler_flags.cmake
docs/: README.md  ROMS-JEDI_ChangeLog.md
src/: CMakeLists.txt
src/mains/: AddIncrement.cc  (+24 more)
src/roms/: CMakeLists.txt  Fortran.h  Traits.h
src/roms/AnalyticInit/: AnalyticInit.cc  AnalyticInit.h  AnalyticInitFortran.h  roms_analyticinit.interface.F90  roms_analyticinit_mod.F90
src/roms/Covariance/: CMakeLists.txt  Covariance.cc  Covariance.h
src/roms/Fields/: CMakeLists.txt  roms_fields_metadata_mod.F90  roms_fields_mod.F90  roms_fieldsutils_mod.F90
src/roms/Geometry/: CMakeLists.txt  Geometry.cc  Geometry.h  GeometryFortran.h  roms_geom.interface.F90  roms_geom_mod.F90
src/roms/GeometryIterator/: CMakeLists.txt  GeometryIterator.cc  GeometryIterator.h  GeometryIteratorFortran.h  roms_geom_iter_interface.F90  roms_geom_iter_mod.F90
src/roms/GetValues/: CMakeLists.txt  GetValues.cc  GetValues.h  GetValuesFortran.h  LinearGetValues.cc  LinearGetValues.h
src/roms/Increment/: CMakeLists.txt  Increment.cc  Increment.h  IncrementFortran.h  roms_increment.interface.F90  roms_increment_mod.F90
src/roms/Model/: Model.cc  Model.h
src/roms/ModelAux/: CMakeLists.txt  ModelAuxControl.cc  ModelAuxControl.h  ModelAuxCovariance.cc  ModelAuxCovariance.h  ModelAuxIncrement.cc  ModelAuxIncrement.h
src/roms/State/: CMakeLists.txt  State.cc  State.h  StateFortran.h  roms_state.interface.F90  roms_state.reg.F90  roms_state_mod.F90
src/roms/Utils/: roms_convert_state_mod.F90
src/roms/VariableChanges/Model2GeoVaLs/: CMakeLists.txt  LinearModel2GeoVaLs.cc  LinearModel2GeoVaLs.h  Model2GeoVaLs.cc  Model2GeoVaLs.h  Model2GeoVaLsFortran.h
src/romsjedi/: CMakeLists.txt  Fortran.h  Traits.h
src/romsjedi/AnalyticInit/: AnalyticInit.cc  AnalyticInit.h  AnalyticInitFortran.h  CMakeLists.txt  roms_analyticinit.interface.F90  roms_analyticinit_mod.F90
src/romsjedi/Covariance/: Covariance.cc  Covariance.h
src/romsjedi/ErrorCovariance/: CMakeLists.txt  ErrorCovariance.cc  ErrorCovariance.h
src/romsjedi/Fields/: CMakeLists.txt  roms_field_mod.F90  roms_fields_metadata_mod.F90  roms_fields_mod.F90  roms_fieldsutils_mod.F90
src/romsjedi/Geometry/: CMakeLists.txt  Geometry.cc  Geometry.h  GeometryFortran.h  GeometryParameters.h  roms_geom.interface.F90  roms_geom.reg.F90  roms_geom_mod.F90
src/romsjedi/GeometryIterator/: CMakeLists.txt  GeometryIterator.cc  GeometryIterator.h  GeometryIteratorFortran.h  roms_geomIterator.interface.F90  roms_geomIterator.reg.F90  roms_geomIterator_mod.F90  roms_geom_iter_interface.F90  roms_geom_iter_mod.F90
src/romsjedi/GetValues/: CMakeLists.txt  GetValues.cc  GetValues.h  GetValuesFortran.h  LinearGetValues.cc  LinearGetValues.h  LinearGetValuesFortran.h  roms_getvalues.interface.F90  roms_getvalues.reg.F90  roms_getvalues_mod.F90  roms_lineargetvalues.interface.F90  roms_lineargetvalues.reg.F90  roms_lineargetvalues_mod.F90
src/romsjedi/Increment/: CMakeLists.txt  Increment.cc  Increment.h  IncrementFortran.h  IncrementParameters.h  roms_increment.interface.F90  roms_increment.reg.F90  roms_increment_mod.F90
src/romsjedi/LinearModel/: CMakeLists.txt  LinearModel.cc  LinearModel.h  LinearModelFortran.h  TrajectoryFortran.h  roms_linearModel.interface.F90  roms_linearModel.reg.F90  roms_linearModel_mod.F90  roms_trajectory.interface.F90  roms_trajectory.reg.F90  roms_trajectory_mod.F90
src/romsjedi/LinearVariableChange/: CMakeLists.txt  LinearVariableChange.cc  LinearVariableChange.h
src/romsjedi/LinearVariableChange/Base/: CMakeLists.txt  LinearVariableChangeBase.cc  LinearVariableChangeBase.h
src/romsjedi/LinearVariableChange/Model2Analysis/: CMakeLists.txt  LinVarChaModel2Analysis.cc  LinVarChaModel2Analysis.h  LinVarChaModel2AnalysisFortran.h  roms_lvc_model2analysis.interface.F90  roms_lvc_model2analysis.reg.F90  roms_lvc_model2analysis_mod.F90
src/romsjedi/LinearVariableChange/Model2GeoVaLs/: CMakeLists.txt  LinVarChaModel2GeoVaLs.cc  LinVarChaModel2GeoVaLs.h  LinVarChaModel2GeoVaLsFortran.h  roms_lvc_model2geovals.interface.F90  roms_lvc_model2geovals.reg.F90  roms_lvc_model2geovals_mod.F90
src/romsjedi/Model/: CMakeLists.txt  Model.cc  Model.h  ModelFortran.h  ModelParameters.h  roms_model.interface.F90  roms_model.reg.F90  roms_model_mod.F90
src/romsjedi/ModelAux/: ModelAuxControl.cc  ModelAuxControl.h  ModelAuxCovariance.cc  ModelAuxCovariance.h  ModelAuxIncrement.cc  ModelAuxIncrement.h
src/romsjedi/ModelBias/: CMakeLists.txt  ModelBias.h  ModelBiasCovariance.h  ModelBiasIncrement.h
src/romsjedi/ModelData/: CMakeLists.txt  ModelData.h
src/romsjedi/NormGradient/: CMakeLists.txt  NormGradient.h
src/romsjedi/State/: CMakeLists.txt  State.cc  State.h  StateFortran.h  StateParameters.h  roms_state.interface.F90  roms_state.reg.F90  roms_state_mod.F90
src/romsjedi/Utils/: CMakeLists.txt  roms_convert_state_mod.F90  roms_utils.F90
src/romsjedi/VariableChange/: CMakeLists.txt  VariableChange.cc  VariableChange.h
src/romsjedi/VariableChange/Base/: CMakeLists.txt  VariableChangeBase.cc  VariableChangeBase.h
src/romsjedi/VariableChange/Model2Analysis/: CMakeLists.txt  VarChaModel2Analysis.cc  VarChaModel2Analysis.h  VarChaModel2AnalysisFortran.h  roms_vc_model2analysis.interface.F90  roms_vc_model2analysis.reg.F90  roms_vc_model2analysis_mod.F90
src/romsjedi/VariableChange/Model2GeoVaLs/: CMakeLists.txt  VarChaModel2GeoVaLs.cc  VarChaModel2GeoVaLs.h  VarChaModel2GeoVaLsFortran.h  roms_vc_model2geovals.interface.F90  roms_vc_model2geovals.reg.F90  roms_vc_model2geovals_mod.F90
src/romsjedi/VariableChanges/: CMakeLists.txt
src/romsjedi/VariableChanges/Model2GeoVaLs/: LinearModel2GeoVaLs.cc  LinearModel2GeoVaLs.h  Model2GeoVaLs.F90  Model2GeoVaLs.cc  Model2GeoVaLs.h  Model2GeoVaLsFortran.h
test/: CMakeLists.txt  amarel_tests.sh  batch_tests.sh  fields_metadata.yaml  orion_tests.sh  slurm_test.sh  submit_tests.sh
(+451 files in other folders)
